style.css
/* general styles */
body{
    margin:0px
}

/* the navbar */
.navbar{
    width: 100%;
}
.headForms{
    gap:5px;
}
/* messages list's field */
.chat{
    display:grid;
    grid-template-rows: auto 55px;
    height: 90vh;
}
.msgs{
    height: 100%;
}
.new{
    position: relative;
    bottom: 5px;
}
/* login/signup page */
    /* both setting */

